2008-04-18  Marco Barisione  <marco@barisione.org>

        Reviewed by Alp Toker.

        https://bugs.webkit.org/show_bug.cgi?id=18576
        [GTK] windowsKeyCodeForKeyEvent doesn't handle GDK_ISO_Enter and
        GDK_KP_Enter

        * platform/gtk/KeyEventGtk.cpp:
        (WebCore::windowsKeyCodeForKeyEvent): handle GDK_ISO_Enter and
        GDK_KP_Enter in windowsKeyCodeForKeyEvent.

2008-04-18  Jan Michael Alonzo  <jmalonzo@unpluggable.com>

        Reviewed by Mark Rowe.

        Gtk build fix.  Profiler.h does not live inside the kjs directory of JavaScriptCore
        so it doesn't make sense to include it as kjs/Profiler.h from WebCore.

        * ForwardingHeaders/profiler/Profiler.h: Renamed from WebCore/ForwardingHeaders/kjs/Profiler.h.
        * page/Console.cpp:

2008-04-18  Antti Koivisto  <antti@apple.com>

        Reviewed by Oliver.

        Implement path animation for <animateMotion>.
        
        SVG test suite tests
        animate-elem-07-t.svg
        animate-elem-08-t.svg
        animate-elem-24-t.svg
        animate-elem-30-t.svg

        * svg/SVGAnimateMotionElement.cpp:
        (WebCore::SVGAnimateMotionElement::SVGAnimateMotionElement):
        (WebCore::SVGAnimateMotionElement::hasValidTarget):
        (WebCore::SVGAnimateMotionElement::parseMappedAttribute):
        (WebCore::SVGAnimateMotionElement::rotateMode):
        (WebCore::SVGAnimateMotionElement::animationPath):
        (WebCore::SVGAnimateMotionElement::calculateAnimatedValue):
        (WebCore::SVGAnimateMotionElement::applyResultsToTarget):
        * svg/SVGAnimateMotionElement.h:
        (WebCore::SVGAnimateMotionElement::):
        * svg/SVGAnimationElement.cpp:
        (WebCore::SVGAnimationElement::animationMode):
        (WebCore::SVGAnimationElement::startedActiveInterval):
        * svg/SVGAnimationElement.h:
        (WebCore::SVGAnimationElement::):
        (WebCore::SVGAnimationElement::calculateDistance):